adding pop.js first time

--- a/popup.html
+++ b/popup.html
@@ -56,14 +56,17 @@
   <div class="box">
     <div class="row">
       <span>Status</span>
-      <span class="status">ON</span>
+      <span id="status">ON</span>
     </div>
 
     <div class="row">
       <span>Max Messages</span>
       <span>10</span>
     </div>
+    <div class="row">
+      <button id="toggle-btn">Click me</button>
+    </div>
   </div>
-
+<script src="popup.js"></script>
 </body>
 </html>
